--- a/Project/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen.vcxproj.filters
+++ b/Project/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Instruction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Token.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Compiler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bytestream.h">
@@ -51,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InstructionSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Compiler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
