--- a/Project/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen.vcxproj
+++ b/Project/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen/SEIS_Lenaerts_Nijssen.vcxproj
@@ -103,6 +103,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -117,7 +118,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,6 +148,7 @@
     <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="Compiler.cpp" />
     <ClCompile Include="Token.cpp" />
+    <ClCompile Include="WASMVM.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bytestream.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="Lexer.h" />
+    <ClInclude Include="WASMVM.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
